--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-    <div id="header">
+    <div id="header" class="bars">
         <h2 id="title">Etch a Sketch</h2>
     </div>
     <div class="aux" id="">
@@ -32,6 +32,9 @@
             </div>
         </div>
     </div>
+    <footer class="bars">
+        <div id="copy">Copyright NicOwO 2022</div>
+    </footer>
 
 
 
